--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <link rel="stylesheet" href="style.css">
+    <title>My CV</title>
     </head>
   <body>
 <h1>Hello, world!</h1>
